# lispi

./: .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  peano.lisp
benches/: peano.rs
src/: elementary_functions.rs  file_parser.rs  interpreter.rs  lib.rs  list_functions.rs  list_macros.rs  main.rs  parser.rs  recursive_functions.rs  repl.rs  types.rs
src/interpreter/: elementary_fns_glue.rs  eval.rs  keywords_glue.rs  mod.rs  other_fns_glue.rs  special_form_glue.rs
tests/: integration_tests.rs  interpreter-tests.rs  interpreter_tests.rs
