[package]
name = "lispi"
version = "0.2.1"
edition = "2021"
license = "MIT"
description = "Lisp I interpreter"
readme = "README.md"
repository = "https://gitlab.com/MaksRawski/lispi"

keywords = ["lisp", "repl"]
categories = ["parser-implementations"]

[dependencies]
log = "0.4.20"
env_logger = "0.10.0"
rustyline = { version = "12.0.0", features = ["derive", "custom-bindings"] }
