[package]
name = "lispi"
version = "0.3.2"
edition = "2021"
license = "MIT"
description = "Lisp I interpreter"
readme = "README.md"
repository = "https://gitlab.com/MaksRawski/lispi"

keywords = ["lisp", "repl"]
categories = ["parser-implementations"]

[dependencies]
log = "0.4.20"
env_logger = "0.10.0"
rustyline = { version = "12.0.0", features = ["derive", "custom-bindings"] }
clap = "2.33.3"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "peano"
harness = false
